// version of protocol buffer used
syntax = "proto3";

// package name for the buffer will be used later
package api_gateway;

// service which can be executed
// Important: each method can have only one input and one output!!!
service ShoppingListAPI {
  rpc AddProductToList(Product) returns (Response);
  rpc RemoveProductFromList(ProductId) returns (Product);
  rpc UpdateProductInList(Product) returns (Response);
  rpc AddProductToCart(ProductId) returns (Response);
  rpc RemoveProductFromCart(ProductId) returns (Response);
  rpc GetList(ListId) returns (ProductList);
  rpc BuyAllProductsInCart(ListId) returns (Response);
}

enum ProductType {
  Meat = 0;
  Fish = 1;
  Fruit = 2;
  Vegetable = 3;
  Drink = 4;
  Other = 5;
}

enum Unit {
  Bottle = 0;
  Packet = 1;
  Kg = 2;
  Grams = 3;
}

message ProductId {
  int64 productId = 1;
  // int64 listId = 2; // TODO: decidere se serve
}

// argument
message Product {
  ProductId itemId = 1;
  string productName = 2;
  ProductType type = 3;
  Unit unit = 4;
  int32 quantity = 5;
  bool addedToCart = 6;
  // TODO: mettere la data di scadenza
}

message ListId {
  int64 listId = 1;
}
// shopping List
message ProductList {
  ListId id = 1;
  string name = 2;
  repeated Product products = 3; // list of products
}

message Response {
  string msg = 1; // "ok" se ha successo, altrimenti l'errore e il messaggio di errore.
}