// version of protocol buffer used
syntax = "proto3";
import "shopping_list.proto";

// package name for the buffer will be used later
package product_storage;

// service which can be executed
service ProductStorage {
  rpc AddProductToPantry(Item) returns (shopping_list.Response);
  rpc RemoveProductFromPantry(ProductId) returns (Item);
  rpc UpdateProductInPantry(ProductId) returns (shopping_list.Response);
  rpc GetPantry(PantryMessage) returns (Pantry); // TODO: per ora restituisce l'intera dispensa. Forse e' un po' eccessivo!
}

message ProductId {
    int64 productId = 1;
}

message Date{
  // [1-9999]
  int32 year = 1; // messages start from 1
  // [1-12]
  int32 month = 2;
  // [1-31]
  int32 day = 3;
}

// argument
message Item {
  int64 itemId = 1;
  shopping_list.ProductType type = 2;
  shopping_list.Unit unit = 3;
  int32 quantity = 4;
  Date expiration_date = 5;
}

message Pantry {
    repeated Item products = 1; // list of products
}

message PantryMessage{}